Make WSConsume work on JDK9 by 1) forcing fork mode, 2) adding explicit dependency to the java compiler module, 3) adding back additional plugin dependencies (namely gnu getop) Also removed ensorsing test (not java.endorsed.dirs supported anymore in jdk9) and updated dependencies.